Issue #883: upgrade minimal required jdk version to 11